// Copyright: (c) 2021 Monocle authors
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";
package monocle_search;
option go_package = "monocle/search";

import "google/protobuf/timestamp.proto";

import "monocle/task_data.proto";

message SearchSuggestionsRequest {
  string index = 1;
}

message SearchSuggestionsResponse {
  repeated string task_types = 1;
  repeated string authors = 2;
  repeated string approvals = 3;
  repeated string priorities = 4;
  repeated string severities = 5;
}

message FieldsRequest {
  string version = 1;
}

message Field {
  string name = 1;
  string description = 2;
  enum Type {
    FIELD_DATE = 0;
    FIELD_NUMBER = 1;
    FIELD_TEXT = 2;
    FIELD_BOOL = 3;
    FIELD_REGEX = 4;
  }
  Type type = 3;
}

message FieldsResponse {
  repeated Field fields = 1;
}

message QueryError {
  string message = 1;
  uint32 position = 2;
}

message Order {
  string field = 1;
  enum Direction {
    ASC = 0;
    DESC = 1;
  }
  Direction direction = 2;
}

message QueryRequest {
  string index = 1;
  string username = 2;
  string query = 3;
  enum QueryType {
    QUERY_CHANGE = 0;
    QUERY_CHANGE_LIFECYCLE = 1;
    QUERY_REPOS_SUMMARY = 2;
  }
  QueryType query_type = 4;

  // Only used for certain queries
  Order order = 5;
  uint32 limit = 6;
}

message File {
  uint32 additions = 1;
  uint32 deletions = 2;
  string path = 3;
}

message Commit {
  string sha = 1;
  string title = 2;
  string author = 3;
  google.protobuf.Timestamp authored_at = 4;
  string committer = 5;
  google.protobuf.Timestamp committed_at = 6;
  uint32 additions = 10;
  uint32 deletions = 11;
}

message Change {
  string change_id = 1;
  string author = 2;
  string title = 3;
  string url = 4;
  string repository_fullname = 5;
  string state = 6;
  string branch = 7;
  string target_branch = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  google.protobuf.Timestamp merged_at = 11;

  oneof merged_byM {
    string merged_by = 12;
  }

  string text = 15;

  uint32 additions = 20;
  uint32 deletions = 21;
  repeated string approval = 25;
  repeated string assignees = 26;
  repeated string labels = 27;

  bool draft = 30;
//  bool has_issue_tracker_links = 31;
  bool mergeable = 32;
//  bool tests_included = 33;

  repeated File changed_files = 50;
  uint32 changed_files_count = 51;

  repeated Commit commits = 60;
  uint32 commits_count = 61;

//  string id = 63;
//  uint32 number = 64;

  repeated monocle_task_data.TaskData task_data = 70;
}

message Changes {
  repeated Change changes = 1;
}

message QueryResponse {
  oneof result {
    QueryError error = 1;
    Changes changes = 2;
    ReposSummary repos_summary = 3;
  }
}

message ChangesHistos {
  message Event {
    uint32 doc_count = 1;
    uint64 key = 2;
    string key_as_string = 3;
  }
  repeated Event ChangeAbandonedEvent = 1;
  repeated Event ChangeCommitForcePushedEvent = 2;
  repeated Event ChangeCommitPushedEvent = 3;
  repeated Event ChangeCreatedEvent = 4;
  repeated Event ChangeMergedEvent = 5;
}
message ChangesLifecycle {
  message Event {
    uint32 authors_count = 1;
    uint32 events_count = 2;
  }
  Event ChangeCommitForcePushedEvent = 1;
  Event ChangeCommitPushedEvent = 2;
  Event ChangeCreatedEvent = 3;
  uint32 abandoned = 4;
  float commits = 5;
  float duration = 6;
  float duration_variability = 7;
  ChangesHistos histos = 8;
  uint32 merged = 9;
  uint32 opened = 10;
  message Ratios {
    float abandoned = 1;
    float iterations = 2;
    float merged = 3;
    float self_merged = 4;
  }
  Ratios ratios = 11;
  uint32 self_merged = 12;
  float tests = 13;
}

message RepoSummary {
  string fullname = 1;
  uint32 total_changes = 2;
  uint32 abandoned_changes = 3;
  uint32 merged_changes = 4;
  uint32 open_changes = 5;
}

message ReposSummary {
  repeated RepoSummary reposum = 1;
}
